--- a/module-federation-plugin-example/projects/shell/src/assets/manifests/manifest.acc.json
+++ b/module-federation-plugin-example/projects/shell/src/assets/manifests/manifest.acc.json
@@ -1,3 +1,4 @@
 {
-	"mfe1": "https://acc.nl/remoteEntry.json"
+	"mfe1": "https://acc.nl/mfe1/remoteEntry.json",
+	"mfe2": "https://acc.nl/mfe2/remoteEntry.json"
 }
