--- a/module-federation-plugin-example/projects/shell/src/assets/manifests/manifest.prod.json
+++ b/module-federation-plugin-example/projects/shell/src/assets/manifests/manifest.prod.json
@@ -1,3 +1,4 @@
 {
-	"mfe1": "https://prod.nl/remoteEntry.json"
+	"mfe1": "https://prod.nl/mfe1/remoteEntry.json",
+	"mfe2": "https://prod.nl/mfe2/remoteEntry.json"
 }
