--- a/module-federation-plugin-example/package.json
+++ b/module-federation-plugin-example/package.json
@@ -6,29 +6,29 @@
     "start": "ng serve",
     "start:all": "concurrently \"ng serve mfe1\" \"ng serve shell\"",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development", 
+    "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^18.2.10",
-    "@angular/common": "^18.2.10",
-    "@angular/compiler": "^18.2.10",
-    "@angular/core": "^18.2.10",
-    "@angular/forms": "^18.2.10",
-    "@angular/platform-browser": "^18.2.10",
-    "@angular/platform-browser-dynamic": "^18.2.10",
-    "@angular/router": "^18.2.10",
+    "@angular/animations": "^19.1.0",
+    "@angular/common": "^19.1.0",
+    "@angular/compiler": "^19.1.0",
+    "@angular/core": "^19.1.0",
+    "@angular/forms": "^19.1.0",
+    "@angular/platform-browser": "^19.1.0",
+    "@angular/platform-browser-dynamic": "^19.1.0",
+    "@angular/router": "^19.1.0",
     "es-module-shims": "^1.5.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.10"
+     "zone.js": "~0.15.0"
   },
   "devDependencies": {
-    "@angular-architects/native-federation": "^18.2.2",
-    "@angular-devkit/build-angular": "^18.2.11",
-    "@angular/cli": "~18.2.11",
-    "@angular/compiler-cli": "^18.2.10",
+    "@angular-architects/native-federation": "^19.0.16",
+    "@angular-devkit/build-angular": "^19.1.3",
+    "@angular/cli": "^19.1.3",
+    "@angular/compiler-cli": "^19.1.0",
     "@types/jasmine": "~4.3.0",
     "concurrently": "^8.2.1",
     "jasmine-core": "~4.6.0",
@@ -37,7 +37,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "ng-packagr": "^18.2.1",
-    "typescript": "~5.5.4"
+    "ng-packagr": "^19.1.1",
+    "typescript": "~5.7.2"
   }
 }
